package com.example.javaServer.Client;

import io.grpc.ManagedChannel;
import io.grpc.ManagedChannelBuilder;
import io.grpc.stub.StreamObserver;
import com.weather.proto.*;

import java.util.concurrent.CountDownLatch;
import java.util.concurrent.TimeUnit;
import java.util.concurrent.atomic.AtomicBoolean;

public class WeatherClient {
    private final ManagedChannel channel;
    private final AnalyticsServiceGrpc.AnalyticsServiceStub asyncStub;
    private final String host;
    private final int port;
    private final AtomicBoolean isRunning;
    private final DataStorage dataStorage;
    private final DashboardService dashboardService;

    public WeatherClient(String host, int port) {
        this.host = host;
        this.port = port;
        this.isRunning = new AtomicBoolean(true);
        this.dataStorage = new DataStorage();
        this.dashboardService = new DashboardService(dataStorage);

        this.channel = ManagedChannelBuilder.forAddress(host, port)
                .usePlaintext()
                .keepAliveTime(30, TimeUnit.SECONDS)
                .keepAliveWithoutCalls(true)
                .build();

        this.asyncStub = AnalyticsServiceGrpc.newStub(channel);

        // Ø¥Ø¶Ø§ÙØ© Ø®Ø·Ø§Ù Ù„Ø¥ØºÙ„Ø§Ù‚ Ù†Ø¸ÙŠÙ
        Runtime.getRuntime().addShutdownHook(new Thread(this::shutdown));
    }

    public void start() {
        System.out.println("ğŸš€ Ø¨Ø¯Ø¡ Ø¹Ù…ÙŠÙ„ Ù…Ø±Ø§Ù‚Ø¨Ø© Ø§Ù„Ø·Ù‚Ø³...");
        System.out.println("ğŸ“ Ø§Ù„Ø§ØªØµØ§Ù„ Ø¨Ù€: " + host + ":" + port);

        // Ø¨Ø¯Ø¡ Ø®Ø¯Ù…Ø© Ø§Ù„ÙˆÙŠØ¨
        dashboardService.start();

        // Ø§Ù„Ø§Ø´ØªØ±Ø§Ùƒ ÙÙŠ Ø§Ù„Ø¥Ø­ØµØ§Ø¦ÙŠØ§Øª
        subscribeToStats();

        // Ø§Ù„Ø§Ø´ØªØ±Ø§Ùƒ ÙÙŠ Ø§Ù„ØªÙ†Ø¨ÙŠÙ‡Ø§Øª
        subscribeToAlerts();

        // Ø§Ù„Ø­ÙØ§Ø¸ Ø¹Ù„Ù‰ Ø§Ù„Ø¨Ø±Ù†Ø§Ù…Ø¬ Ù†Ø´Ø·
        keepAlive();
    }

    private void subscribeToStats() {
        System.out.println("ğŸ“Š Ø¬Ø§Ø±ÙŠ Ø§Ù„Ø§Ø´ØªØ±Ø§Ùƒ ÙÙŠ Ø¥Ø­ØµØ§Ø¦ÙŠØ§Øª Ø§Ù„Ø·Ù‚Ø³...");

        ReportRequest request = ReportRequest.newBuilder()
                .setRegion("Middle-East")
                .build();

        asyncStub.subscribeToStats(request, new StreamObserver<WeatherStats>() {
            @Override
            public void onNext(WeatherStats stats) {
                System.out.println("ğŸ“ˆ Ø¨ÙŠØ§Ù†Ø§Øª Ø¥Ø­ØµØ§Ø¦ÙŠØ§Øª Ø¬Ø¯ÙŠØ¯Ø©:");
                System.out.printf("   ğŸ“ Ù…ØªÙˆØ³Ø· Ø§Ù„Ø­Ø±Ø§Ø±Ø©: %.2fÂ°C\n", stats.getAvgTemp());
                System.out.printf("   ğŸ”¥ Ø£Ù‚ØµÙ‰ Ø­Ø±Ø§Ø±Ø©: %.2fÂ°C\n", stats.getMaxTemp());
                System.out.printf("   âš ï¸  Ø¥Ø¬Ù…Ø§Ù„ÙŠ Ø§Ù„ØªÙ†Ø¨ÙŠÙ‡Ø§Øª: %d\n", stats.getTotalAlerts());
                System.out.println("   " + "=".repeat(40));

                // Ø­ÙØ¸ Ø§Ù„Ø¨ÙŠØ§Ù†Ø§Øª Ù„Ù„ØªØ®Ø²ÙŠÙ†
                dataStorage.addStats(stats);

                // ØªØ­Ø¯ÙŠØ« Ù„ÙˆØ­Ø© Ø§Ù„ØªØ­ÙƒÙ…
                dashboardService.updateStats(stats);
            }

            @Override
            public void onError(Throwable t) {
                System.err.println("âŒ Ø®Ø·Ø£ ÙÙŠ Ø§Ø´ØªØ±Ø§Ùƒ Ø§Ù„Ø¥Ø­ØµØ§Ø¦ÙŠØ§Øª: " + t.getMessage());
                System.out.println("ğŸ”„ Ø¥Ø¹Ø§Ø¯Ø© Ø§Ù„Ù…Ø­Ø§ÙˆÙ„Ø© Ø®Ù„Ø§Ù„ 10 Ø«ÙˆØ§Ù†ÙŠ...");

                // Ø¥Ø¹Ø§Ø¯Ø© Ø§Ù„Ù…Ø­Ø§ÙˆÙ„Ø© Ø¨Ø¹Ø¯ ÙØªØ±Ø©
                if (isRunning.get()) {
                    try {
                        Thread.sleep(10000);
                        subscribeToStats();
                    } catch (InterruptedException e) {
                        Thread.currentThread().interrupt();
                    }
                }
            }

            @Override
            public void onCompleted() {
                System.out.println("ğŸ”š Ø§Ù†ØªÙ‡Ù‰ ØªØ¯ÙÙ‚ Ø§Ù„Ø¥Ø­ØµØ§Ø¦ÙŠØ§Øª Ù…Ù† Ø§Ù„Ø®Ø§Ø¯Ù…");
                if (isRunning.get()) {
                    System.out.println("ğŸ”„ Ø¥Ø¹Ø§Ø¯Ø© Ø§Ù„Ø§ØªØµØ§Ù„...");
                    subscribeToStats();
                }
            }
        });
    }

    private void subscribeToAlerts() {
        System.out.println("ğŸš¨ Ø¬Ø§Ø±ÙŠ Ø§Ù„Ø§Ø´ØªØ±Ø§Ùƒ ÙÙŠ ØªÙ†Ø¨ÙŠÙ‡Ø§Øª Ø§Ù„Ø·Ù‚Ø³...");

        asyncStub.subscribeToAlerts(Empty.newBuilder().build(), new StreamObserver<AlertMessage>() {
            @Override
            public void onNext(AlertMessage alert) {
                System.out.println("âš ï¸  ØªÙ†Ø¨ÙŠÙ‡ Ø·Ù‚Ø³ Ø¬Ø¯ÙŠØ¯:");
                System.out.printf("   ğŸ™ï¸  Ø§Ù„Ù…Ø¯ÙŠÙ†Ø©: %s\n", alert.getCity());
                System.out.printf("   ğŸŒ¡ï¸  Ø¯Ø±Ø¬Ø© Ø§Ù„Ø­Ø±Ø§Ø±Ø©: %.2fÂ°C\n", alert.getTemperature());
                System.out.printf("   ğŸ“ Ø§Ù„Ø±Ø³Ø§Ù„Ø©: %s\n", alert.getMessage());
                System.out.println("   " + "ğŸš¨".repeat(10));

                // Ø­ÙØ¸ Ø§Ù„ØªÙ†Ø¨ÙŠÙ‡
                dataStorage.addAlert(alert);

                // ØªØ­Ø¯ÙŠØ« Ù„ÙˆØ­Ø© Ø§Ù„ØªØ­ÙƒÙ…
                dashboardService.updateAlert(alert);

                // Ø¥Ø´Ø¹Ø§Ø± ÙÙˆØ±ÙŠ
                sendNotification(alert);
            }

            @Override
            public void onError(Throwable t) {
                System.err.println("âŒ Ø®Ø·Ø£ ÙÙŠ Ø§Ø´ØªØ±Ø§Ùƒ Ø§Ù„ØªÙ†Ø¨ÙŠÙ‡Ø§Øª: " + t.getMessage());
                System.out.println("ğŸ”„ Ø¥Ø¹Ø§Ø¯Ø© Ø§Ù„Ù…Ø­Ø§ÙˆÙ„Ø© Ø®Ù„Ø§Ù„ 10 Ø«ÙˆØ§Ù†ÙŠ...");

                if (isRunning.get()) {
                    try {
                        Thread.sleep(10000);
                        subscribeToAlerts();
                    } catch (InterruptedException e) {
                        Thread.currentThread().interrupt();
                    }
                }
            }

            @Override
            public void onCompleted() {
                System.out.println("ğŸ”š Ø§Ù†ØªÙ‡Ù‰ ØªØ¯ÙÙ‚ Ø§Ù„ØªÙ†Ø¨ÙŠÙ‡Ø§Øª Ù…Ù† Ø§Ù„Ø®Ø§Ø¯Ù…");
                if (isRunning.get()) {
                    System.out.println("ğŸ”„ Ø¥Ø¹Ø§Ø¯Ø© Ø§Ù„Ø§ØªØµØ§Ù„...");
                    subscribeToAlerts();
                }
            }
        });
    }

    private void sendNotification(AlertMessage alert) {
        // ÙŠÙ…ÙƒÙ† Ø¥Ø¶Ø§ÙØ© Ø¥Ø´Ø¹Ø§Ø±Ø§Øª Ù†Ø¸Ø§Ù… Ù‡Ù†Ø§
        System.out.println("ğŸ”” Ø¥Ø´Ø¹Ø§Ø±: ØªÙ†Ø¨ÙŠÙ‡ Ø·Ù‚Ø³ ÙÙŠ " + alert.getCity() + " - " + alert.getMessage());
    }

    private void keepAlive() {
        try {
            while (isRunning.get()) {
                Thread.sleep(1000);

                // Ø·Ø¨Ø§Ø¹Ø© Ù†Ø¨Ø¶Ø© Ø­ÙŠØ§Ø© ÙƒÙ„ 30 Ø«Ø§Ù†ÙŠØ©
                if (System.currentTimeMillis() % 30000 < 1000) {
                    System.out.println("ğŸ’“ Ø§Ù„Ø¹Ù…ÙŠÙ„ ÙŠØ¹Ù…Ù„ - ÙÙŠ Ø§Ù†ØªØ¸Ø§Ø± Ø§Ù„Ø¨ÙŠØ§Ù†Ø§Øª...");
                    System.out.printf("   ğŸ“Š Ø§Ù„Ø¥Ø­ØµØ§Ø¦ÙŠØ§Øª Ø§Ù„Ù…Ø³ØªÙ„Ù…Ø©: %d\n", dataStorage.getStatsCount());
                    System.out.printf("   ğŸš¨ Ø§Ù„ØªÙ†Ø¨ÙŠÙ‡Ø§Øª Ø§Ù„Ù…Ø³ØªÙ„Ù…Ø©: %d\n", dataStorage.getAlertsCount());
                }
            }
        } catch (InterruptedException e) {
            Thread.currentThread().interrupt();
            System.out.println("â¹ï¸  ØªÙ… Ø¥ÙŠÙ‚Ø§Ù Ø§Ù„Ø¹Ù…ÙŠÙ„");
        }
    }

    public void shutdown() {
        System.out.println("ğŸ›‘ Ø¥ÙŠÙ‚Ø§Ù Ø¹Ù…ÙŠÙ„ Ø§Ù„Ø·Ù‚Ø³...");
        isRunning.set(false);

        try {
            channel.shutdown().awaitTermination(5, TimeUnit.SECONDS);
            dashboardService.stop();
            System.out.println("âœ… ØªÙ… Ø§Ù„Ø¥ÙŠÙ‚Ø§Ù Ø¨Ù†Ø¬Ø§Ø­");
        } catch (InterruptedException e) {
            Thread.currentThread().interrupt();
            channel.shutdownNow();
        }
    }

    public DataStorage getDataStorage() {
        return dataStorage;
    }

    public DashboardService getDashboardService() {
        return dashboardService;
    }
}